--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -667,7 +667,7 @@
             <i class="fa fa-arrow-left"></i> {{ t('laskentakaavaviiteasetuksetmodal.palaafunktioasetuksiin') || 'Palaa funktioasetuksiin' }}
         </button>
 
-        <button class="btn btn-default btn-sm" ng-click="kaariNimettyFunktioargumentti(kaareService.funktioKaare.funktiokutsuNimi, childFunktiokutsuIndex); sulje()"
+        <button class="btn btn-default btn-sm" ng-click="kaariFunktiokutsu(selectedKaarivaFunktionimi, childFunktiokutsuIndex); sulje()"
                 ng-disabled="!selectedKaarivaFunktionimi"
                 popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter"
                 popover="{{ t('laskentakaavaviiteasetuksetmodal.muutokseteivat') || 'Muutokset eivät tallennu ennen kuin tallennat kaavan laskentakaavanäkymästä' }}">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.tallenna') || 'Kääri funktiokutsu'}}</button>
