päivitetään angular ja angular-bootstrap niin saadaan dropdown-direktiivit

--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/funktiokutsuLabel.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/funktiokutsuLabel.html
@@ -1,3 +1,4 @@
 <span class="dropdown" dropdown on-toggle="toggled(open)">
-  <a href class="dropdown-toggle" dropdown-toggle>Click me for a dropdown, yo!</a>
+  <span ng-transclude></span>
+  <a class="dropdown-toggle" dropdown-toggle></a>
 </span>
