--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -78,7 +78,7 @@
                             <p class="form-control-static">Hakulomakkeen tunniste</p>
                             <select ng-model="valintaperuste.tunniste"
                                     ng-options="data.key as data.value for data in bigdata"
-                                    ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg">
+                                    ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg" ng-change="changeAvainOptions(valintaperuste)">
                                 <option value=""></option>
                             </select>
                         </div>
@@ -88,7 +88,7 @@
                             <p class="form-control-static">Lisäkysymyksen tunniste</p>
                             <select ng-model="valintaperuste.tunniste"
                                     ng-options="data.key as data.value for data in lisakysymysAvaimet"
-                                    ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg">
+                                    ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg" ng-change="changeAvainOptions(valintaperuste)">
                                 <option value=""></option>
                             </select>
                         </div>
@@ -96,9 +96,9 @@
                     <div>
                         <span class="help-block">Vapaamuotoinen tunniste</span>
                         <input ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg" type="text" ng-model="valintaperuste.tunniste" class="form-control"
-                               required="required"/>
+                               required="required" ng-change="changeAvainOptions(valintaperuste)"/>
                     </div>
-                    <div ng-show="avainOptions.length > 0">
+                    <div ng-show="valintaperuste.avainOptions.length > 0">
                         <div class="valintaperuste-form">
                             <table class="table">
                                 <thead>
