--- a/src/main/webapp/app/yhteisvalinnanhallinta/yhteisvalinnanhallinta.html
+++ b/src/main/webapp/app/yhteisvalinnanhallinta/yhteisvalinnanhallinta.html
@@ -9,9 +9,12 @@
 
     <breadcrumb></breadcrumb>
     <h2>{{ t('yhteisvalinnanhallinta.synkronoi') || 'Synkronoi tarjonta' }}</h2>
-    <select auth ng-if="userAccess.hasCrudRights() && (userModel.isOphUser || userModel.isKKUser) && (model.haut.length > 0)" ng-model="model.haku" ng-options="haku.uiNimi for haku in model.haut | HakuOwnerFilter | orderBy:'nimi.kieli_fi'"></select>
+    <select auth
+            ng-if="userAccess.hasCrudRights() && (userModel.isOphUser || userModel.isKKUser) && (model.haut.length > 0)"
+            ng-model="model.haku"
+            ng-options="haku.uiNimi for haku in model.haut | HakuOwnerFilter | orderBy:'nimi.kieli_fi'">
+    </select>
 
-
-    <button auth ng-disabled="!( userAccess.crudOph || (userModel.isKKUSer && userAccess.hasCrudRights()) )" ng-click="aktivoi()" class="btn btn-primary btn-sm">{{ t('yhteisvalinnanhallinta.synkronoi') || 'Synkronoi tarjonta' }}</button>
+    <button auth ng-disabled="!( userAccess.crudOph || (userModel.isKKUser && userAccess.hasCrudRights()) )" ng-click="aktivoi()" class="btn btn-primary btn-sm">{{ t('yhteisvalinnanhallinta.synkronoi') || 'Synkronoi tarjonta' }}</button>
 </div>
 
