--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -108,7 +108,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr ng-repeat="avain in avainOptions">
+                                <tr ng-repeat="avain in valintaperuste.avainOptions">
                                     <td>{{avain.id}}</td>
                                     <td>{{avain.text}}<td>
                                 </tr>
