VT-1148 hakulomakkeen vastausvaihtoehdot

--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -103,8 +103,8 @@
                             <table class="table">
                                 <thead>
                                 <tr>
-                                    <td>{{ t('laskentakaavaviiteasetuksetmodal.avaimenArvo') || 'Lisäkysymyksen arvo' }}</td>
-                                    <td>{{ t('laskentakaavaviiteasetuksetmodal.avaimenKysymys') || 'Lisäkysymyksen selite' }}</td>
+                                    <td>{{ t('laskentakaavaviiteasetuksetmodal.avaimenArvo') || 'Kysymyksen arvo' }}</td>
+                                    <td>{{ t('laskentakaavaviiteasetuksetmodal.avaimenKysymys') || 'Kysymyksen selite' }}</td>
                                 </tr>
                                 </thead>
                                 <tbody>
