VT-1138: laskentakaavapuun kontrolleriin tarvittavia funktioita

--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -545,16 +545,27 @@
 
 
     <div class="modal-footer">
-        <!-- Funktiokutsun asetukset -->
+        <button class="btn btn-default btn-sm"
+                ng-disabled="!(userAccess.crudOrg)"
+                ng-click="kopioiFunktiokutsu(); sulje();">{{ t('laskentakaavaviiteasetuksetmodal.kopioi') || 'Kopioi'}}
+        </button>
+
+        <button class="btn btn-default btn-sm"
+                ng-disabled="!userAccess.crudOrg"
+                ng-click="siirraFunktiokutsu(); sulje();">{{ t('laskentakaavaviiteasetuksetmodal.siirra') || 'Siirrä'}}
+        </button>
+
         <button class="btn btn-default btn-sm"
                 ng-disabled="!userAccess.crudOrg"
                 ng-click="showFunktiokutsunKaarintaModal()">{{ t('funktiokutsuasetuksetmodal.kaariminen') || 'Funktiokutsun kääriminen'}}
         </button>
+
         <button class="btn btn-default btn-sm"
                 ng-disabled="alikaavaValues.isAlikaava || funktioasetukset.parentFunktiokutsu === model.laskentakaavapuu.funktiokutsu || !userAccess.crudOrg"
                 ng-click="laskentakaavaModalService.toggleModalSelection('tallennusKaavana')">{{ t('laskentakaavaviiteasetuksetmodal.kaavanosantallennus') || 'Kaavan osan
             tallennus' }}
         </button>
+
         <button ng-disabled="alikaavaValues.isAlikaava || !userAccess.crudOrg" class="btn btn-sm btn-default"
                 ng-click="removeFunktiokutsu(); sulje()" popover-popup-delay="500" popover-placement="top"
                 popover-trigger="mouseenter"
@@ -562,6 +573,7 @@
             <i class="fa fa-trash-o"></i> {{ t('laskentakaavaviiteasetuksetmodal.poistafunktiokutsu') || 'Poista
             funktiokutsu' }}
         </button>
+
         <button class="btn btn-default btn-sm" ng-click="sulje()"
                 role="button" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter"
                 popover="{{ t('laskentakaavaviiteasetuksetmodal.muutokseteivat') || 'Muutokset eivät tallennu ennen kuin tallennat kaavan laskentakaavanäkymästä' }}">
