Väärä routeparams korjattu valintaperusteista

--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -51,7 +51,7 @@
         </div>
 
         <!-- LASKENTAKAAVAPUUN JUURI -->
-        <div class="frame open" ng-class="isRootSelected ? 'active' : ''">
+        <div auth class="frame open" ng-class="isRootSelected ? 'active' : ''">
             <span class="icon" ng-click="toggleAll()">&nbsp;</span>
             <span class="node bold" ng-click="setRootSelection(model.laskentakaavapuu.funktiokutsu)">{{model.laskentakaavapuu.nimi}}</span>
         </div>
