--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/uusilaskentakaava.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/uusilaskentakaava.html
@@ -1,6 +1,6 @@
 <div class="col-sm-12" ng-controller="UusiLaskentakaavaController">
     <h2>{{ t('uusilaskentakaava.luonti') || 'Uuden laskentakaavan luonti' }}</h2>
-    <form name="kaavaForm" class="form-horizontal" novalidate>
+    <form auth name="kaavaForm" class="form-horizontal" novalidate>
         <div class="form-group">
             <label class="col-sm-2 control-label">{{ t('uusilaskentakaava.nimi') || 'Laskentakaavan nimi' }}</label>
 
